{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 75,
  "lineage": "d5067cbe-893c-489e-96de-cf448f3a56ff",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/networkSecurityGroups/ctadispatch-production-aks-nsg",
            "location": "eastus2",
            "name": "ctadispatch-production-aks-nsg",
            "resource_group_name": "ctadispatch-production-eus2-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowKubeAPI",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "AzureCloud",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Application": "CTADispatch",
              "CostCenter": "Operations",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Organization": "Capital Tech Alliance"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/networkSecurityGroups/ctadispatch-production-data-nsg",
            "location": "eastus2",
            "name": "ctadispatch-production-data-nsg",
            "resource_group_name": "ctadispatch-production-eus2-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowPostgreSQLFromAKS",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.2.0.0/22",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Application": "CTADispatch",
              "CostCenter": "Operations",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Organization": "Capital Tech Alliance"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/networkSecurityGroups/ctadispatch-production-pe-nsg",
            "location": "eastus2",
            "name": "ctadispatch-production-pe-nsg",
            "resource_group_name": "ctadispatch-production-eus2-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowFromAKS",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.2.0.0/22",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyAllInbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Application": "CTADispatch",
              "CostCenter": "Operations",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Organization": "Capital Tech Alliance"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/22"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-aks-subnet",
            "name": "ctadispatch-production-aks-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ctadispatch-production-eus2-rg",
            "service_endpoints": [
              "Microsoft.EventHub",
              "Microsoft.KeyVault",
              "Microsoft.ServiceBus",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ctadispatch-production-eus2-vnet"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.main",
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "postgres-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-data-subnet",
            "name": "ctadispatch-production-data-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ctadispatch-production-eus2-rg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ctadispatch-production-eus2-vnet"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.main",
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.8.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-pe-subnet",
            "name": "ctadispatch-production-pe-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ctadispatch-production-eus2-rg",
            "service_endpoints": [
              "Microsoft.EventHub",
              "Microsoft.KeyVault",
              "Microsoft.ServiceBus",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "ctadispatch-production-eus2-vnet"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.main",
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-aks-subnet",
            "network_security_group_id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/networkSecurityGroups/ctadispatch-production-aks-nsg",
            "subnet_id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-aks-subnet"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.main",
            "azurerm_network_security_group.aks",
            "azurerm_resource_group.main",
            "azurerm_subnet.aks",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-data-subnet",
            "network_security_group_id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/networkSecurityGroups/ctadispatch-production-data-nsg",
            "subnet_id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-data-subnet"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.main",
            "azurerm_network_security_group.data",
            "azurerm_resource_group.main",
            "azurerm_subnet.data",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-pe-subnet",
            "network_security_group_id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/networkSecurityGroups/ctadispatch-production-pe-nsg",
            "subnet_id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet/subnets/ctadispatch-production-pe-subnet"
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.main",
            "azurerm_network_security_group.private_endpoints",
            "azurerm_resource_group.main",
            "azurerm_subnet.private_endpoints",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "ddos_protection_plan": [
              {
                "enable": true,
                "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/ddosProtectionPlans/ctadispatch-production-eus2-ddos"
              }
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "af187738-1904-4f26-a148-81d570e0ca88",
            "id": "/subscriptions/021415c2-2f52-4a73-ae77-f8363165a5e1/resourceGroups/ctadispatch-production-eus2-rg/providers/Microsoft.Network/virtualNetworks/ctadispatch-production-eus2-vnet",
            "location": "eastus2",
            "name": "ctadispatch-production-eus2-vnet",
            "resource_group_name": "ctadispatch-production-eus2-rg",
            "tags": {
              "Application": "CTADispatch",
              "CostCenter": "Operations",
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Organization": "Capital Tech Alliance",
              "Service": "Networking"
            }
          },
          "dependencies": [
            "azurerm_network_ddos_protection_plan.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}